Header no longer stretches

--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,6 @@
   display: flex;
 }
 
-.header {
-
-  background-color: black;
-  width: 100vw;
-
-}
-
 .sidenav {
   height: 100%;
   width: 250px;
@@ -44,7 +37,6 @@
 .content {
   transition: 250ms;
   margin-left: 250px;
-  margin-bottom: 20px;
 }
 
 .content-expand {
